@@ -17,6 +17,7 @@
     * tables are now automatically handled by the weather station.
     * cleaning thread has been modified to handle new tables.
     * option window can handle options to control MSL pressure and sensors for display and time series.
+    * thread to display data can handle different tables based on options.
 
   * FIXED:
     * few corrections to make the weather station works on raspberry pi.
